web site completed but not supperted responsibility

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ footer {
     background: rgb(16, 129, 120);
     background: linear-gradient(90deg, rgba(16, 129, 120, 0.76234243697479) 0%, rgba(25, 101, 153, 0.700717787114846) 95%);
 }
+
 .selectedLink {
     color: rgb(94, 234, 212);
+}
+
+.why-fantola {
+    background: rgb(16, 20, 129);
+    background: linear-gradient(90deg, rgba(16, 20, 129, 1) 0%, rgba(143, 25, 153, 1) 64%);
 }
